// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Section should match snapshot 1`] = `
<div
  className="columns pt-4 pb-4 section-container"
  style={
    Object {
      "background": "white",
    }
  }
>
  <GridItem
    className="flex items-start justify-center grid-item"
  >
    <H2>
      Test heading
    </H2>
    <SubTitleH4>
      Test sub heading
    </SubTitleH4>
    <SubTitleH6
      className="mb-4"
    >
      Test description
    </SubTitleH6>
  </GridItem>
  <GridItem
    className="flex items-center justify-center grid-item"
  >
    <img
      alt="Test heading"
      src=""
    />
  </GridItem>
</div>
`;

exports[`Section should match snapshot when has button 1`] = `
<div
  className="columns pt-4 pb-4 section-container"
  style={
    Object {
      "background": "white",
    }
  }
>
  <GridItem
    className="flex items-start justify-center grid-item"
  >
    <H2>
      Test heading
    </H2>
    <SubTitleH4>
      Test sub heading
    </SubTitleH4>
    <SubTitleH6
      className="mb-4"
    >
      Test description
    </SubTitleH6>
    <a
      href="/test"
    >
      My button
    </a>
  </GridItem>
  <GridItem
    className="flex items-center justify-center grid-item"
  >
    <img
      alt="Test heading"
      src=""
    />
  </GridItem>
</div>
`;

exports[`Section should match snapshot when image in right 1`] = `
<div
  className="columns pt-4 pb-4 section-container"
  style={
    Object {
      "background": "white",
    }
  }
>
  <GridItem
    className="flex items-start justify-center grid-item"
  >
    <H2>
      Test heading
    </H2>
    <SubTitleH4>
      Test sub heading
    </SubTitleH4>
    <SubTitleH6
      className="mb-4"
    >
      Test description
    </SubTitleH6>
  </GridItem>
  <GridItem
    className="flex items-center justify-center grid-item"
  >
    <img
      alt="Test heading"
      src=""
    />
  </GridItem>
</div>
`;
